[package]
name = "voltage-tonic-lnd"
version = "0.3.0"
edition = "2021"
rust-version = "1.75.0"
description = "An async library implementing LND RPC via tonic and prost. Forked from https://github.com/Kixunil/tonic_lnd"
homepage = "https://github.com/voltagecloud/tonic_lnd"
repository = "https://github.com/voltagecloud/tonic_lnd"
readme = "README.md"
keywords = ["LND", "rpc", "grpc", "tonic", "async"]
categories = ["api-bindings", "asynchronous", "cryptography::cryptocurrencies", "network-programming"]
license = "MITNFA"

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost", "tonic-prost-build"]

[package.metadata.release]
sign-commit = true
sign-tag = true

[features]
lightningrpc = []
signrpc = []
walletrpc = ["signrpc"]
peersrpc = []
versionrpc = []
routerrpc = ["lightningrpc"]
invoicesrpc = ["lightningrpc"]
staterpc = ["lightningrpc"]
lightning = ["lightningrpc", "walletrpc", "peersrpc", "versionrpc", "routerrpc", "invoicesrpc", "staterpc"]
taprpc = []
assetwalletrpc = ["taprpc"]
mintrpc = ["taprpc"]
priceoraclerpc = []
rfqrpc = []
tapchannelrpc = ["taprpc", "rfqrpc"]
tapdevrpc = ["taprpc"]
universerpc = ["taprpc"]
taprootassets = ["taprpc", "assetwalletrpc", "mintrpc", "priceoraclerpc", "rfqrpc", "tapchannelrpc", "tapdevrpc", "universerpc"]
all = ["lightning", "taprootassets"]
ring = ["tonic/tls-ring"]
aws-lc = ["tonic/tls-aws-lc"]
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]
tls = ["tls-native-roots", "tls-webpki-roots"]
default = ["lightning", "ring", "tls"]

[dependencies]
hex = "0.4.3"
http = "1.3.1"
prost = "0.14.0"
tonic-prost = "0.14.0"
thiserror = "2.0.17"
tokio = { version = "1.32.0", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["net"], optional = true}
tonic = { version = "0.14.0", features = ["transport"] }
zeroize = "1.8.2"

[build-dependencies]
tonic-prost-build = "0.14.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }

[[example]]
name = "get_info"
path = "examples/get_info.rs"
required-features = ["lightningrpc"]

[[example]]
name = "get_version"
path = "examples/get_version.rs"
required-features = ["versionrpc"]

[[example]]
name = "track_payment"
path = "examples/track_payment.rs"
required-features = ["routerrpc"]

[[example]]
name = "cancel_invoice"
path = "examples/cancel_invoice.rs"
required-features = ["invoicesrpc"]

[[example]]
name = "subscribe_invoices"
path = "examples/subscribe_invoices.rs"
required-features = ["invoicesrpc"]

[[example]]
name = "intercept_htlcs"
path = "examples/intercept_htlcs.rs"
required-features = ["routerrpc", "tokio-stream"]
